--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,14 +5,35 @@ tag = True
 tag_name = v{new_version}
 message = Bump version: {current_version} → {new_version}
 
+
 [bumpversion:file:screamer/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
+
 [bumpversion:file:CMakeLists.txt]
 search = project(screamer VERSION {current_version} LANGUAGES CXX)
 replace = project(screamer VERSION {new_version} LANGUAGES CXX)
+
+
+[bumpversion:file:docs/conf.py]
+search = release = '{current_version}'
+replace = release = '{new_version}'
+
+
+[bumpversion:file:CHANGELOG.md] 
+search = 
+## [Unreleased] - yyyy-mm-dd
+replace = 
+## [Unreleased] - yyyy-mm-dd
+
+### Added
+
+### Fixed
+
+## Version v{new_version} ({now:%Y-%m-%d}) 
