--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,15 +72,20 @@ packages = [{ include = "screamer" }]
 python = "^3.9"
 pybind11 = "^2.9"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.0"
-
 [tool.poetry.group.dev.dependencies]
-wheel = "^0.44.0"
-build = "^1.2.2.post1"
 bump2version = "^1.0.1"
 invoke = "^2.2.0"
+
+[tool.poetry.group.testing.dependencies]
+pytest = "^7.0"
 numpy = { version = "^2.0.1", python = ">=3.10"}
+
+[tool.poetry.group.docs.dependencies]
+sphinx = { version = "^8.1", python = ">=3.10" }
+sphinx-rtd-theme = "^3.0.1"
+sphinxcontrib-napoleon = "^0.7"
+sphinx-autodoc-typehints = { version = "^2.5", python = ">=3.10" }
+myst-parser = { version = "^4.0", python = ">=3.10" }
 
 [tool.pytest.ini_options]
 addopts = "--ignore=_skbuild"
