--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,10 +1,10 @@
 version: 2
 
-# Define the build environment
+# Define the build environment and tools
 build:
-  os: ubuntu-22.04  # A recent Ubuntu version to ensure necessary tools are available
+  os: ubuntu-22.04  # Ensure a recent Ubuntu version is used
   tools:
-    python: "3.10"  # Ensure Python version matches your local environment
+    python: "3.10"  # Set the Python version to use
 
 # Install system dependencies for building the C++ extension
 apt_packages:
@@ -13,27 +13,26 @@ apt_packages:
   - python3-dev      # Required for compiling Python extensions
 
 # Commands to build the C++ bindings and documentation
-build:
-  commands:
-    # Step 1: Install Poetry (if it's not already installed)
-    - pip install poetry
+commands:
+  # Step 1: Install Poetry (if it's not already installed)
+  - pip install poetry
 
-    # Step 2: Configure Poetry to use the ReadTheDocs virtual environment
-    - poetry config virtualenvs.create false
+  # Step 2: Configure Poetry to use the ReadTheDocs virtual environment
+  - poetry config virtualenvs.create false
 
-    # Step 3: Create a build directory and configure the C++ project with CMake
-    - mkdir -p build
-    - cd build
-    - cmake ..  # Adjust with additional flags if necessary
+  # Step 3: Create a build directory and configure the C++ project with CMake
+  - mkdir -p build
+  - cd build
+  - cmake ..  # Adjust with additional flags if necessary
 
-    # Step 4: Build the C++ project
-    - cmake --build .
+  # Step 4: Build the C++ project
+  - cmake --build .
 
-    # Step 5: Copy the built shared library (bindings) to the expected location
-    - cp screamer_bindings*.so ../screamer  # Make sure this path is correct
+  # Step 5: Copy the built shared library (bindings) to the expected location
+  - cp screamer_bindings*.so ../screamer  # Make sure this path is correct
 
-    # Step 6: Install the documentation dependencies with Poetry in the existing virtual environment
-    - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install --only docs
+  # Step 6: Install the documentation dependencies with Poetry in the existing virtual environment
+  - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install --only docs
 
 # Build documentation in the docs directory with Sphinx
 sphinx:
