--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,32 +6,29 @@ build:
   tools:
     python: "3.10"  # Set the Python version to use
 
-# Install system dependencies for building the C++ extension
-apt_packages:
-  - build-essential  # Provides GCC and other build tools
-  - cmake            # CMake to configure and build the project
-  - python3-dev      # Required for compiling Python extensions
-
 # Commands to build the C++ bindings and documentation
 commands:
-  # Step 1: Install Poetry (if it's not already installed)
+  # Step 1: Update and install system dependencies using apt-get
+  - apt-get update && apt-get install -y build-essential cmake python3-dev
+
+  # Step 2: Install Poetry (if it's not already installed)
   - pip install poetry
 
-  # Step 2: Configure Poetry to use the ReadTheDocs virtual environment
+  # Step 3: Configure Poetry to use the ReadTheDocs virtual environment
   - poetry config virtualenvs.create false
 
-  # Step 3: Create a build directory and configure the C++ project with CMake
+  # Step 4: Create a build directory and configure the C++ project with CMake
   - mkdir -p build
   - cd build
   - cmake ..  # Adjust with additional flags if necessary
 
-  # Step 4: Build the C++ project
+  # Step 5: Build the C++ project
   - cmake --build .
 
-  # Step 5: Copy the built shared library (bindings) to the expected location
+  # Step 6: Copy the built shared library (bindings) to the expected location
   - cp screamer_bindings*.so ../screamer  # Make sure this path is correct
 
-  # Step 6: Install the documentation dependencies with Poetry in the existing virtual environment
+  # Step 7: Install the documentation dependencies with Poetry in the existing virtual environment
   - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install --only docs
 
 # Build documentation in the docs directory with Sphinx
