--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,32 +5,31 @@ build:
   os: ubuntu-22.04  # Ensure a recent Ubuntu version is used
   tools:
     python: "3.10"  # Set the Python version to use
+  commands:
+    # Step 1: Update and install system dependencies using apt-get
+    - apt-get update && apt-get install -y build-essential cmake python3-dev
 
-# Commands to build the C++ bindings and documentation
-commands:
-  # Step 1: Update and install system dependencies using apt-get
-  - apt-get update && apt-get install -y build-essential cmake python3-dev
+    # Step 2: Install Poetry (if it's not already installed)
+    - pip install poetry
 
-  # Step 2: Install Poetry (if it's not already installed)
-  - pip install poetry
+    # Step 3: Configure Poetry to use the ReadTheDocs virtual environment
+    - poetry config virtualenvs.create false
 
-  # Step 3: Configure Poetry to use the ReadTheDocs virtual environment
-  - poetry config virtualenvs.create false
+    # Step 4: Create a build directory and configure the C++ project with CMake
+    - mkdir -p build
+    - cd build
+    - cmake ..  # Adjust with additional flags if necessary
 
-  # Step 4: Create a build directory and configure the C++ project with CMake
-  - mkdir -p build
-  - cd build
-  - cmake ..  # Adjust with additional flags if necessary
+    # Step 5: Build the C++ project
+    - cmake --build .
 
-  # Step 5: Build the C++ project
-  - cmake --build .
+    # Step 6: Copy the built shared library (bindings) to the expected location
+    - cp screamer_bindings*.so ../screamer  # Make sure this path is correct
 
-  # Step 6: Copy the built shared library (bindings) to the expected location
-  - cp screamer_bindings*.so ../screamer  # Make sure this path is correct
-
-  # Step 7: Install the documentation dependencies with Poetry in the existing virtual environment
-  - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install --only docs
+    # Step 7: Install the documentation dependencies with Poetry in the existing virtual environment
+    - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install --only docs
 
 # Build documentation in the docs directory with Sphinx
 sphinx:
+  builder: html
   configuration: docs/conf.py  # Path to the Sphinx configuration file
